ensure that "Details" button is visible with dark themes (bug 911)

--- a/ui/skin/common/enigmail-common.css
+++ b/ui/skin/common/enigmail-common.css
@@ -103,8 +103,8 @@ enigmailLink {
 .enigMsgHdrView-flat-button {
   min-width: 1px !important;
   -moz-appearance: none !important;
-  color: black;
-  background-color: #DDDDDD;
+  color: black !important;
+  background-color: #DDDDDD !important;
 
   border: 2px solid transparent;
   margin-top: 2px !important;
@@ -116,7 +116,7 @@ enigmailLink {
 }
 
 .enigMsgHdrView-flat-button:hover {
-  background-color: #CCCCCC;
+  background-color: #CCCCCC !important;
 }
 
 .enigmailToolbar {
